--- a/configurations/member-sharecare-registration.yaml
+++ b/configurations/member-sharecare-registration.yaml
@@ -1,8 +1,2 @@
-aws:
-  secretsmanager:
-    name: nexus-apps/nexus-customer-engagement/member-sharecare-registration-kafka-stream
-    defaultContext: nexus-apps/commons
-cloud:
-  aws:
-    region:
-      static: us-east-1
+member.sharecare.registration.accountIds: 00000000423456,00000000523456,00000000623456
+enableAccountIdCheck: true
