--- a/configurations/member-sharecare-realage.yaml
+++ b/configurations/member-sharecare-realage.yaml
@@ -1,2 +1,2 @@
-member.sharecare.registration.accountIds: 00000000523456,00000000623456
+member.sharecare.age.accountIds: 00000000523456,00000000623456
 enableAccountIdCheck: true
